plugins/xpath/xpath-lang/testData/xslt/highlighting/emptyExpression.xsl
<xsl:stylesheet version="1.1" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">

  <xsl:template match="/">
    <xsl:value-of select=<error descr="Empty XPath expression">""</error> />
    <xsl:value-of select="<error descr="Empty XPath expression">  </error>" />
  </xsl:template>

</xsl:stylesheet>